--- a/about.Rmd
+++ b/about.Rmd
@@ -1,10 +1,19 @@
 ---
-title: "About this site"
-description: |
-  Some additional details about the website
+title: "Maxine Schaefer"
+image: "maxine.jpg"
+links:
+  - label: LinkedIn
+    url: "https://www.linkedin.com/in/maxine-schaefer/"
+  - label: Twitter
+    url: "https://twitter.com/MaxineNSchaefer"
+  - label: GitHub
+    url: "https://github.com/MaxineNSchaefer"
+  - label: Email
+    url: "mailto:mschaeferliteracy@gmail.com"
+output:
+  postcards::jolla_blue
 ---
+ 
+I am a researcher hoping to better understand how to support literacy acquisition and development. In my PhD, which is a longitudinal project, I examine phonological processing skills and how they support literacy in children's first and additional language. I have also worked on the Early Grade Reading Studies in South Africa.
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
-
+In these roles, I have developed my research and project management skills, and have also created language and literacy tests for under-researched languages such as isiXhosa and isiZulu. In the last year I have been working on developing my data wrangling and analysis skills in R, and have recently converted to an open science enthusiast. I also have experience as a lecturer at tertiary level.
