--- a/index.Rmd
+++ b/index.Rmd
@@ -1,18 +1,20 @@
 ---
-title: "iyo-distill"
-description: |
-  Welcome to the website. I hope you enjoy it!
+title: "Maxine Schaefer"
 site: distill::distill_website
+image: "maxine.jpg"
+links:
+  - label: LinkedIn
+    url: "https://www.linkedin.com/in/maxine-schaefer/"
+  - label: Twitter
+    url: "https://twitter.com/MaxineNSchaefer"
+  - label: GitHub
+    url: "https://github.com/MaxineNSchaefer"
+  - label: Email
+    url: "mailto:mschaeferliteracy@gmail.com"
+output:
+  postcards::jolla
 ---
+ 
+I am a researcher hoping to better understand how to support literacy acquisition and development. In my PhD, which is a longitudinal project, I examine phonological processing skills and how they support literacy in children's first and additional language. I have also worked on the Early Grade Reading Studies in South Africa.
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-
-# Learn more about creating websites with Distill at:
-# https://rstudio.github.io/distill/website.html
-
-# Learn more about publishing to GitHub Pages at:
-# https://rstudio.github.io/distill/publish_website.html#github-pages
-
-```
-
+In these roles, I have developed my research and project management skills, and have also created language and literacy tests for under-researched languages such as isiXhosa and isiZulu. In the last year I have been working on developing my data wrangling and analysis skills in R, and have recently converted to an open science enthusiast. I also have experience as a lecturer at tertiary level.
