--- a/publications.Rmd
+++ b/publications.Rmd
@@ -41,6 +41,10 @@ knitr::opts_chunk$set(echo = TRUE)
 
 **Schaefer, M.**, & Kotzé, J. (2019). Early reading skills related to grade 1 english second language literacy in rural South African schools. South African Journal of Childhood Education, 9(1), a644. [https://doi.org/10.4102/sajce.v9i1.644](https://doi.org/10.4102/sajce.v9i1.644)
 
-Bennett, W. G., **Diemer, M.**, Kerford, J., Probert, T., & Wesi, T. (2016). Setswana (South African). Journal of the International Phonetic Association, 46(2), 235–246. [https://doi.org/10.1017/S0025100316000050](https://doi.org/10.1017/S0025100316000050)
+Bennett, W. G., **Diemer, M.**, Kerford, J., Probert, T., & Wesi, T. (2016). Setswana (South African). Journal of the International Phonetic Association, 46(2), 235–246. [https://doi.org/10.1017/S0025100316000050](https://doi.org/10.1017/S0025100316000050), [preprint version](https://sites.google.com/site/wmgbennett/papers)
 
-**Diemer, M.**, van der Merwe, K., & de Vos, M. (2015). The development of phonological awareness literacy measures for isiXhosa. Southern African Linguistics and Applied Language Studies, 33(3), 325–341. [https://doi.org/10.2989/16073614.2015.1108769](https://doi.org/10.2989/16073614.2015.1108769), open access version
+**Diemer, M.**, van der Merwe, K., & de Vos, M. (2015). The development of phonological awareness literacy measures for isiXhosa. Southern African Linguistics and Applied Language Studies, 33(3), 325–341. [https://doi.org/10.2989/16073614.2015.1108769](https://doi.org/10.2989/16073614.2015.1108769), [preprint version](https://www.researchgate.net/publication/287797182_The_development_of_phonological_awareness_literacy_measures_for_isiXhosa)
+
+# Reports
+
+Jukes, M., Pretorius, E., **Schaefer, M.**, Tjasink, K., Roper, M., Bisgard, J., Mabhena, N. (2020). Setting Reading Benchmarks in South Africa. Department of Basic Education: Pretoria. [pdf](https://pdf.usaid.gov/pdf_docs/PA00X1NZ.pdf) 
