--- a/_posts/2021-06-25-using-patchwork-for-neat-visualisations/using-patchwork-for-neat-visualisations.Rmd
+++ b/_posts/2021-06-25-using-patchwork-for-neat-visualisations/using-patchwork-for-neat-visualisations.Rmd
@@ -9,6 +9,12 @@ date: 06-25-2021
 output:
   distill::distill_article:
     self_contained: false
+    toc: yes
+    toc_float: yes
+    number_sections: yes
+    theme: readable
+    df_print: kable
+preview: density_ran.png
 ---
 
 
