--- a/_posts/2021-06-25-using-patchwork-for-neat-visualisations/using-patchwork-for-neat-visualisations.Rmd
+++ b/_posts/2021-06-25-using-patchwork-for-neat-visualisations/using-patchwork-for-neat-visualisations.Rmd
@@ -4,7 +4,7 @@ description: |
   I present an example of how I used {patchwork} to present density plots for my PhD results chapyer. I simulate data based on the results from my PhD to illustrate my learnings.
 author:
   - name: Maxine Schaefer
-    url: {}
+    url: {https://maxinenschaefer.github.io/MaxineSchaefer/posts/2021-06-25-using-patchwork-for-neat-visualisations/}
 date: 06-25-2021
 output:
   distill::distill_article:
